--- a/index.html
+++ b/index.html
@@ -239,6 +239,17 @@
         <!-- this here all section is added by dynamically from showAllPhone() this function -->
       </main>
     </section>
+
+
+    <!-- ?Modal POP up -->
+     <!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+
+    <div id="pop-up">
+      
+    </div>
+
+
     <script src="./main.js"></script>
   </body>
 </html>
