--- a/index.html
+++ b/index.html
@@ -242,13 +242,38 @@
 
 
     <!-- ?Modal POP up -->
-     <!-- Open the modal using ID.showModal() method -->
-<!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
 
     <div id="pop-up">
       
     </div>
 
+    <footer class="md:flex justify-around py-20 px-3 items-center gap-5 bg-base-200 text-base-content mt-20">
+      <nav class="flex flex-col gap-2 ">
+        <h6 class="footer-title">Services</h6>
+        <a class="link link-hover">Accessories</a>
+        <a class="link link-hover">Exchange</a>
+        <a class="link link-hover">2 Years Warranty</a>
+        <a class="link link-hover">7 days replacement</a>
+      </nav>
+      <nav class="flex flex-col gap-2 my-5 md:my-0">
+        <h6 class="footer-title">Company</h6>
+        <a class="link link-hover">Apple</a>
+        <a class="link link-hover">Oppo</a>
+        <a class="link link-hover">Samsung</a>
+      </nav>
+      <nav class="flex flex-col gap-2">
+        <h6 class="footer-title">Legal</h6>
+        <a class="link link-hover">Terms of Condition</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Customer policy</a>
+      </nav>
+    </footer>
+
+    <footer class="footer footer-center bg-base-300 text-base-content p-4">
+      <aside>
+        <p>Copyright © <script>{new Date().getFullYear()}</script> - All right reserved by A.Al Mamun</p>
+      </aside>
+    </footer>
 
     <script src="./main.js"></script>
   </body>
